--- a/.github/workflows/pushtotrunk.yml
+++ b/.github/workflows/pushtotrunk.yml
@@ -27,3 +27,4 @@ jobs:
         SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
         SLUG: checkview
         IGNORE_OTHER_FILES: true
+        README_NAME: README.txt
